# odin_master

./: .editorconfig  .gitignore  .odin-version  CLAUDE.md  ENGINE.md  LEARNING.md  ONBOARDING.md  PLAYGROUND.md  README.md  bash.exe.stackdump  justfile  odinfmt.json  ols.json  pyproject.toml
.github/workflows/: ci.yml  cron-nightly.yml  docs.yml  reusable-ci.yml
.odin-master/: versions.toml
bench/edge-function-vs-scanline/: main.odin
bench/grid-vs-svo/: main.odin
bench/naive-vs-bresenham/: main.odin
content/: manifest.yaml  quality-checks.yaml
content/sources/: .fetch-state.json
content/wiki/: INDEX.md
docs/: adding-sources.md  daily-use.md  getting-started.md  migration-2026.md  multi-machine.md  smoke-test.md  troubleshooting.md
docs/design/: ui-strategy.md
lab/: .gitignore  HANDOFF_FROM_WINDOWS.md  HANDOFF_TO_MAC.md  PLAN.md  README.md  build.py  justfile  lab_dump.ppm
lab/src/: main_hot_reload.odin
lessons/: README.md
lessons/00-setup-check/: README.md
lessons/01-hellope/: README.md
lessons/02-types-and-printing/: README.md  expected-output.txt
lessons/03-procedures-and-multiple-returns/: README.md  expected-output.txt
lessons/04-strings-and-runes/: README.md
lessons/05-arrays-fixed/: README.md
playground/: README.md  scratch.odin
scratch/: README.md  scratch.odin
tests/: README.md  conftest.py  test_repo_structure.py
tools/indexer/: pyproject.toml
tools/indexer/odin_master/: bootstrap_corpus.py  chunker.py  cli.py  docs_build.py  embedder.py  lint.py  manifest.py  pipeline.py  publish.py  quality_check.py  scaffolder.py  scratchpad.py  setup_machine.py  source_diff.py  store.py  summarize.py  template_update.py  test_summary.py  vendor_add.py  wiki_index.py
tools/indexer/odin_master/ingestors/: __init__.py  git_clone.py  html_mirror.py  local_dir.py  local_file.py  pasted_text.py  pdf.py
tools/indexer/tests/: test_bootstrap_corpus.py  test_chunker.py  test_cli_dispatch.py  test_docs_build.py  test_embedder.py  test_html_mirror.py  test_lint.py  test_manifest.py  test_pipeline.py  test_publish.py  test_quality_check.py  test_scaffolder.py  test_scratchpad.py  test_setup_machine.py  test_store.py  test_summarize.py  test_template_update.py  test_test_summary.py  test_vendor_add.py  test_wiki_index.py
tools/search/: Cargo.toml
tools/search/src/: embed.rs  fuse.rs  main.rs  manifest.rs  repo_root.rs  settings.rs  store.rs
tools/search/tests/: integration.rs
(+1044 files in other folders)
