[project]
name = "odin-master-template"
version = "0.0.1"
description = "Personal multi-domain technical-knowledge substrate (Odin v1)."
requires-python = ">=3.12"
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "tomli>=2; python_version<'3.11'"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --import-mode=importlib"
