[package]
name = "odin-search"
version = "0.0.2"
edition = "2021"
description = "Local hybrid search CLI for the odin_master corpus."
license = "MIT"

[[bin]]
name = "odin-search"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
usearch = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
dirs = "5"
anyhow = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
